--- a/UI/src/styles/app.component.css
+++ b/UI/src/styles/app.component.css
@@ -184,7 +184,7 @@ body {
     background: #fff;
     padding: 10px 15px;
     font-size: 12px;
-    margin-right: auto;
+    margin-left: auto;
 }
 
 .search-box .input-group .input-group-prepend .input-group-text {
@@ -209,7 +209,7 @@ body {
     padding: 20px 0px;
     margin-top:5px;
     font-size: 12px;
-    height: calc(100% - 51px);
+    height: calc(100% - 63px);
 }
 .add-list-elements .list-group .list-group-item {
     border: 0;
@@ -241,8 +241,6 @@ body {
     margin-right:10px;
     font-weight: 600;
 }
-
-
 .search-bar {
     margin-right: auto;
     max-width: 320px;
@@ -253,17 +251,120 @@ body {
     height: 100%;
     margin-bottom: 0;
 }
-
 .full-height{
     height: 100%;
 }
 .scroller{
-    height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
-}
-    
+}    
 .item-area{
     height: calc(100% - 64px);
 }
+.sort-select{
+    height: 70px;
+    padding: 18px 2px;
+}
+.list-cover{
+    float: left;
+    display: block;
+    height: 100%;
+}
+.list-table{
+    height: calc(100% - 70px);
+}
+.p-datatable-scrollable, .p-datatable-scrollable-wrapper, .p-datatable-scrollable-view{
+    height: 100%;
+}
+.p-datatable-scrollable-body{
+    height: calc(100% - 37px);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.react-autosuggest__container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+}
+
+.react-autosuggest__input {
+    width: 240px;
+    border: 0;
+    border-bottom: 1px solid #efefef;
+    border-radius: 0;
+    font-size: 12px;
+    padding: .25rem .5rem;
+}
+
+.react-autosuggest__input--focused {
+    outline: none;
+    box-shadow: 0 0 0 0;
+    border-bottom: 1px solid #7eb73d;
+}
+
+.react-autosuggest__input--open {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+    display: none;
+}
+
+.react-autosuggest__suggestions-container--open {
+    display: block;
+    position: absolute;
+    top: 30px;
+    width: 240px;
+    border: 1px solid #aaa;
+    background-color: #fff;
+    font-family: Helvetica, sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    z-index: 2;
+}
+
+.react-autosuggest__suggestions-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+    cursor: pointer;
+    margin: 5px 20px;
+}
+
+.react-autosuggest__suggestion--highlighted {
+    background-color: #ddd;
+}
+
 
